Changed contribution description to remove outdated date information (#349)

--- a/contribute.html
+++ b/contribute.html
@@ -67,13 +67,13 @@
 					<p>Contributions are always welcome, no matter how small or large. You can do this in many ways and this page provides everything you need to get started!</p>
 				</div>
 				<div class="title">
-					<h2>Grow in 2022</h2>
+					<h2>Grow in the future</h2>
 					<p>
 						We are asking you to help the DietPi project. DietPi is an open-source product and it is free to use. We are sustained by donations and <b>even a small one (as little as the price of a cup of coffee)</b> would help the things move forward, covering the costs for hardware (new boards, micro SD cards etc.), web hosting and future development.
 						<br><br>This allows us to continue working on DietPi, make it better with every new update.
 						<br><br><img src="images/contribute/coffee.jpg" alt="Coffee" width="200" height="189" loading="lazy">
-						<br><br>In 2022 we made 13 releases and brought 113 improvements and changes, and fixed 89 bugs. We provided new software titles, support new SBCs and brought many optimisations. There are over <a href="https://dietpi.com/survey/" target="_blank" rel="noopener">120000</a> systems running DietPi.
-						<br><b>Enable us to grow in 2023!</b>
+						<br><br>In the last years we made many releases to bring improvements, changes and bug fixes (nearly monthly releases). We provided new software titles, support new SBCs and brought many optimisations. There are over <a href="https://dietpi.com/survey/" target="_blank" rel="noopener">120000</a> systems running DietPi.
+						<br><b>Enable us to grow also in the future!</b>
 					</p>
 					<div class="medium-text">
 						<a href="https://www.paypal.com/donate?hosted_button_id=6DVBECXRW3TAA" class="button" target="_blank" rel="noopener">
