Add v9.10 release slide

--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<!-- Slide 1 -->
 				<div class="da-slide da-slide-current">
-					<h2>DietPi v9.9 has been released</h2>
+					<h2>DietPi v9.10 has been released</h2>
 					<h4>Check out all changes</h4>
-					<p>Support and new images added for Orange Pi 5 Pro, Orange Pi 5 Max and NanoPi M6. DietPi-DDNS now supports updating IPv4 and IPv6 addresses at the same time. MineOS login issue solved, and more.</p>
-					<a class="da-link" href="https://dietpi.com/docs/releases/v9_9/" target="_blank" rel="noopener">Release notes</a>
+					<p>New tool <code>dietpi-display</code> to control console display mode and rotation, and toggle NanoPi M6 DSI display ports. Firmware migration for Raspberry Pi. RISC-V systems migrated to Debian Trixie. Ethernet fixed on Orange Pi 5 Max.</p>
+					<a class="da-link" href="https://dietpi.com/docs/releases/v9_10/" target="_blank" rel="noopener">Release notes</a>
 					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
 				</div>
 				<!-- Slide 2 -->
