Update RPi image descriptions

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 								</div>
 							</div>
 							<p>
-								These images are compatible with all Raspberry Pi 2, 3 and 4 models, but we recommend it only for Raspberry Pi 2 PCB v1.1, or if you require a 32-bit system explicitly.
+								These images are compatible with all Raspberry Pi 2, 3, 4 and 5 models, but we recommend it only for Raspberry Pi 2 PCB v1.1, or if you require a 32-bit system explicitly.
 								<br>The Raspberry Pi 2 comes in two versions, which is printed onto the PCB. PCB v1.1 has an ARMv7 chip, hence needs to use this image, PCB v1.2 can use the ARMv8 image, which we then generally recommend.
 							</p>
 						</div>
@@ -308,7 +308,7 @@
 								</div>
 							</div>
 							<p>
-								These images are compatible with all Raspberry Pi 3 and 4 models, as well as Raspberry Pi 2 PCB v1.2 and Zero 2.
+								These images are compatible with all Raspberry Pi 3, 4 and 5 models, as well as Raspberry Pi 2 PCB v1.2 and Zero 2.
 								<br>The Raspberry Pi 2 comes in two versions, which is printed onto the PCB. PCB v1.1 has an ARMv7 chip, hence needs to use the ARMv7 image, PCB v1.2 can use this ARMv8 image, which we then generally recommend.
 							</p>
 						</div>
@@ -334,7 +334,7 @@
 									<br>This image has our <a href="https://dietpi.com/forum/t/dietpi-allo-com-web-gui-image/1523" target="_blank" rel="noopener" style="text-decoration-line:underline;">Allo web GUI</a> and audiophile software pre-installed.
 								</div>
 							</div>
-							<p>Not all hardware features, especially overclocking, display and camera settings, can be controlled with our scripts yet. Legacy GPU and camera support, MMAL and DispmanX have been removed, which breaks some older camera software. Details can be found <a href="https://github.com/MichaIng/DietPi/issues/6676" target="_blank" rel="noopener">here</a></p>
+							<p>Not all hardware features, especially overclocking and camera settings, can be controlled with our scripts yet. Details can be found <a href="https://github.com/MichaIng/DietPi/issues/6676" target="_blank" rel="noopener">here</a></p>
 						</div>
 						<div class="col-md-6"><img src="images/sbc_images/raspberrypi5.jpg" alt="Raspberry Pi 5 photo" width="8" height="5" loading="lazy"></div>
 					</div>
