Remove RPi 5 testing flag

--- a/index.html
+++ b/index.html
@@ -1917,7 +1917,7 @@
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix raspberrypi">
 						<a href="#downloadinfo" class="thumbnail" rel="#raspberrypi5">
 							<img src="images/sbc_images/raspberrypi5.jpg" alt="Raspberry Pi 5 photo" width="8" height="5" loading="lazy">
-							<h3>Raspberry Pi 5 (testing)</h3>
+							<h3>Raspberry Pi 5</h3>
 							<p>BCM2712 | 4 Cores | ARMv8</p>
 						</a>
 					</div>
