--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<!-- Slide 1 -->
 				<div class="da-slide da-slide-current">
-					<h2>DietPi v9.11 has been released</h2>
+					<h2>DietPi v9.12 has been released</h2>
 					<h4>Check out all changes</h4>
-					<p>This release mainly adds support for Pi-hole v6. If you updated Pi-hole v5 to v6, the DietPi update performs some additional migration and cleanup steps, and offers to uninstall webserver and PHP.</p>
+					<p>This release adds support for the fish (friendly interactive shell), Amiberry v7 and Amiberry-Lite, as well as WiringPi for Orange Pi SBCs.</p>
 					<a class="da-link" href="https://dietpi.com/docs/releases/v9_11/" target="_blank" rel="noopener">Release notes</a>
 					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
 				</div>
