added info for ROCK 5B model (#358)
Co-authored-by: MichaIng <micha@dietpi.com>

--- a/index.html
+++ b/index.html
@@ -1644,7 +1644,7 @@
 								<div><span>RAM:</span>4 GiB - 16 GiB LPDDR4</div>
 								<div><span>USB:</span>USB 3.0 OTG and HOST</div>
 								<div><span>NET:</span>2.5 Gbit Ethernet, optional Radxa Wireless Module</div>
-								<div><span>Storage:</span>microSD and eMMC sockets</div>
+								<div><span>Storage:</span>microSD, eMMC and M.2 sockets</div>
 								<br>
 								<div><a href="https://dietpi.com/downloads/images/DietPi_ROCK5B-ARMv8-Bookworm.img.xz"><span>Download Image:</span><i class="fa fa-download"></i><u>Download</u></a> (<a href="https://dietpi.com/downloads/images/DietPi_ROCK5B-ARMv8-Bookworm.img.xz.sha256"><u>SHA256</u></a>) (<a href="https://dietpi.com/downloads/images/DietPi_ROCK5B-ARMv8-Bookworm.img.xz.asc"><u>Signature</u></a>)</div>
 								<div><a href="https://dietpi.com/docs/install/" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
