Update web hosting credits

--- a/contribute.html
+++ b/contribute.html
@@ -375,8 +375,8 @@
 				<br>
 				<p>&copy; 2025 DietPi created by <a href="https://dietpi.com/" target="_blank" rel="noopener">Daniel Knight</a></p>
 				<p>&copy; 2013 Website theme by <a href="https://www.graphberry.com/" target="_blank" rel="noopener">Graphberry</a></p>
-				<p>DietPi web hosting is powered by <a href="https://myvirtualserver.com" target="_blank" rel="noopener">myVirtualserver.com
-				<br><br><img src="images/myvirtualserver_logo.png" alt="myVirtualserver" width="200" height="44" loading="lazy"></a></p>
+				<p>DietPi web hosting is powered by <a href="https://login-online.com/" target="_blank" rel="noopener">login-online.com
+				<br><br><img src="images/login-systemhaus-logo.jpg" alt="LOGIN SystemHaus GmbH logo" width="200" height="44" loading="lazy"></a></p>
 			</div>
 		</div>
 		<!-- Scroll up button -->
