Add release image

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 					<h4>Check out all changes</h4>
 					<p>This release enforces the change of the default password for users and software installs, and comes with a lot of upgrades and fixes for various SBC kernels and bootloaders.</p>
 					<a class="da-link" href="https://dietpi.com/docs/releases/v9_13/" target="_blank" rel="noopener">Release notes</a>
-					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
+					<div class="da-img"><img class="img-fluid" src="https://dietpi.com/docs/assets/images/dietpi-release-v9_13.webp" alt="DietPi logo" width="360" height="240" loading="lazy"></div>
 				</div>
 				<!-- Slide 2 -->
 				<div class="da-slide">
