Fix NanoPi R5C info

--- a/index.html
+++ b/index.html
@@ -1198,7 +1198,7 @@
 							<div class="project-info">
 								<div><span>CPU:</span>Rockchip RK3568 2.0 GHz | 4 cores | ARMv8</div>
 								<div><span>RAM:</span>1-4 GiB LPDDR4X</div>
-								<div><span>NET:</span>2.5 Gbit + 1 Gbit Ethernet + M.2 WiFi socket</div>
+								<div><span>NET:</span>2x 2.5 Gbit Ethernet + M.2 WiFi socket</div>
 								<div><span>Storage:</span>8-32 GiB eMMC</div>
 								<br>
 								<div><a href="https://dietpi.com/downloads/images/DietPi_NanoPiR5C-ARMv8-Bookworm.img.xz"><span>Download Image:</span><i class="fa fa-download"></i><u>Download</u></a> (<a href="https://dietpi.com/downloads/images/DietPi_NanoPiR5C-ARMv8-Bookworm.img.xz.sha256"><u>SHA256</u></a>) (<a href="https://dietpi.com/downloads/images/DietPi_NanoPiR5C-ARMv8-Bookworm.img.xz.asc"><u>Signature</u></a>)</div>
