--- a/index.html
+++ b/index.html
@@ -966,8 +966,12 @@
 						<div class="col-md-6 project-description">
 							<div class="project-info">
 								<div>
+									<a href="https://dietpi.com/downloads/images/DietPi_NativePC-UEFI-x86_64-Bookworm.img.xz"><span>Live image:</span><i class="fa fa-download"></i><u>Download</u></a> (<a href="https://dietpi.com/downloads/images/DietPi_NativePC-UEFI-x86_64-Bookworm.img.xz.sha256"><u>SHA256</u></a>) (<a href="https://dietpi.com/downloads/images/DietPi_NativePC-UEFI-x86_64-Bookworm.img.xz.asc"><u>Signature</u></a>)
+									<br>Choose this to write and boot directly, without any installer.
+								</div>
+								<div>
 									<a href="https://dietpi.com/downloads/images/DietPi_NativePC-UEFI-x86_64-Bookworm_Installer.iso"><span>Installer image:</span><i class="fa fa-download"></i><u>Download</u></a> (<a href="https://dietpi.com/downloads/images/DietPi_NativePC-UEFI-x86_64-Bookworm_Installer.iso.sha256"><u>SHA256</u></a>) (<a href="https://dietpi.com/downloads/images/DietPi_NativePC-UEFI-x86_64-Bookworm_Installer.iso.asc"><u>Signature</u></a>)
-									<br>Write to e.g. a USB stick to boot and install DietPi to an internal drive.
+									<br>Choose this to write to e.g. a USB stick to boot and install DietPi to an internal drive.
 								</div>
 								<div><a href="https://dietpi.com/docs/install/" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
 							</div>
