Add Orange Pi 5 Ultra to download page

--- a/index.html
+++ b/index.html
@@ -1521,7 +1521,7 @@
 						<div class="col-md-6 project-description">
 							<div class="project-info">
 								<div><span>CPU:</span>Rockchip RK3588 1.8/2.4 GHz | 8 cores | ARMv8</div>
-								<div><span>RAM:</span>4 GiB - 16 GiB LPDDR4</div>
+								<div><span>RAM:</span>4 GiB - 16 GiB LPDDR5</div>
 								<div><span>USB:</span>1x USB 3.1 3x USB 2.0</div>
 								<div><span>NET:</span>Gbit Ethernet and WiFi 5/Bluetooth</div>
 								<div><span>Storage:</span>microSD, eMMC and M.2 2280 NVMe sockets</div>
@@ -1529,7 +1529,7 @@
 								<div><a href="https://dietpi.com/downloads/images/DietPi_OrangePi5Pro-ARMv8-Bookworm.img.xz"><span>Download Image:</span><i class="fa fa-download"></i><u>Download</u></a> (<a href="https://dietpi.com/downloads/images/DietPi_OrangePi5Pro-ARMv8-Bookworm.img.xz.sha256"><u>SHA256</u></a>) (<a href="https://dietpi.com/downloads/images/DietPi_OrangePi5Pro-ARMv8-Bookworm.img.xz.asc"><u>Signature</u></a>)</div>
 								<div><a href="https://dietpi.com/docs/install/" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
 							</div>
-							<p>A new variant of the Orange Pi 5 family. Compared to the original Orange Pi 5, it features onboard WiFi 5, an eMMC slot, dual HDMI, and supports NVMe SSDs up to 2280 format.</p>
+							<p>A new variant of the Orange Pi 5 family. Compared to the original Orange Pi 5, it features DDR5 RAM, onboard WiFi 5, an eMMC slot, dual HDMI, and supports NVMe SSDs up to 2280 format.</p>
 						</div>
 						<div class="col-md-6"><img src="images/sbc_images/orangepi5pro.jpg" alt="Orange Pi 5 Pro photo" width="8" height="5" loading="lazy"></div>
 					</div>
@@ -1541,7 +1541,7 @@
 						<div class="col-md-6 project-description">
 							<div class="project-info">
 								<div><span>CPU:</span>Rockchip RK3588 1.8/2.4 GHz | 8 cores | ARMv8</div>
-								<div><span>RAM:</span>4 GiB - 16 GiB LPDDR4</div>
+								<div><span>RAM:</span>4 GiB - 16 GiB LPDDR5</div>
 								<div><span>USB:</span>2x USB 3.0 2x USB 2.0</div>
 								<div><span>NET:</span>2.5 Gbit Ethernet and WiFi 6/Bluetooth</div>
 								<div><span>Storage:</span>microSD, eMMC and M.2 2280 NVMe sockets</div>
@@ -1549,9 +1549,29 @@
 								<div><a href="https://dietpi.com/downloads/images/DietPi_OrangePi5Max-ARMv8-Bookworm.img.xz"><span>Download Image:</span><i class="fa fa-download"></i><u>Download</u></a> (<a href="https://dietpi.com/downloads/images/DietPi_OrangePi5Max-ARMv8-Bookworm.img.xz.sha256"><u>SHA256</u></a>) (<a href="https://dietpi.com/downloads/images/DietPi_OrangePi5Max-ARMv8-Bookworm.img.xz.asc"><u>Signature</u></a>)</div>
 								<div><a href="https://dietpi.com/docs/install/" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
 							</div>
-							<p>A new variant of the Orange Pi 5 family. Compared to the original Orange Pi 5, it features onboard WiFi 6E, 2.5G Ethernet, an eMMC slot, dual HDMI, and supports NVMe SSDs up to 2280 format.</p>
+							<p>A new variant of the Orange Pi 5 family. Compared to the original Orange Pi 5, it features DDR5 RAM, onboard WiFi 6E, 2.5 Gbit Ethernet, an eMMC slot, dual HDMI, and supports NVMe SSDs up to 2280 format.</p>
 						</div>
 						<div class="col-md-6"><img src="images/sbc_images/orangepi5max.jpg" alt="Orange Pi 5 Max photo" width="8" height="5" loading="lazy"></div>
+					</div>
+				</div>
+				<!-- Orange Pi 5 Ultra -->
+				<div id="orangepi5ultra" class="single-project">
+					<div class="row"><div class="col-md-12 project-title"><h3>Orange Pi 5 Ultra</h3><span class="close"></span></div></div>
+					<div class="row">
+						<div class="col-md-6 project-description">
+							<div class="project-info">
+								<div><span>CPU:</span>Rockchip RK3588 1.8/2.4 GHz | 8 cores | ARMv8</div>
+								<div><span>RAM:</span>4 GiB - 16 GiB LPDDR5</div>
+								<div><span>USB:</span>2x USB 3.0 2x USB 2.0</div>
+								<div><span>NET:</span>2.5 Gbit Ethernet and WiFi 6/Bluetooth</div>
+								<div><span>Storage:</span>microSD, eMMC and M.2 2280 NVMe sockets</div>
+								<br>
+								<div><a href="https://dietpi.com/downloads/images/DietPi_OrangePi5Ultra-ARMv8-Bookworm.img.xz"><span>Download Image:</span><i class="fa fa-download"></i><u>Download</u></a> (<a href="https://dietpi.com/downloads/images/DietPi_OrangePi5Ultra-ARMv8-Bookworm.img.xz.sha256"><u>SHA256</u></a>) (<a href="https://dietpi.com/downloads/images/DietPi_OrangePi5Ultra-ARMv8-Bookworm.img.xz.asc"><u>Signature</u></a>)</div>
+								<div><a href="https://dietpi.com/docs/install/" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
+							</div>
+							<p>A new variant of the Orange Pi 5 family. Compared to the original Orange Pi 5, it features DDR5 RAM, onboard WiFi 6E, 2.5 Gbit Ethernet, an eMMC slot, an additional HDMI input port, and supports NVMe SSDs up to 2280 format.</p>
+						</div>
+						<div class="col-md-6"><img src="images/sbc_images/orangepi5ultra.jpg" alt="Orange Pi 5 Ultra photo" width="8" height="5" loading="lazy"></div>
 					</div>
 				</div>
 				<!-- Orange Pi Zero 3 -->
@@ -1858,6 +1878,13 @@
 						<a href="#downloadinfo" class="thumbnail" rel="#orangepi5max">
 							<img src="images/sbc_images/orangepi5max.jpg" alt="Orange Pi 5 Max photo" width="8" height="5" loading="lazy">
 							<h3>Orange Pi 5 Max</h3>
+							<p>RK3588 2.4GHz | 8 cores | ARMv8</p>
+						</a>
+					</div>
+					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix orangepi">
+						<a href="#downloadinfo" class="thumbnail" rel="#orangepi5ultra">
+							<img src="images/sbc_images/orangepi5ultra.jpg" alt="Orange Pi 5 Ultra photo" width="8" height="5" loading="lazy">
+							<h3>Orange Pi 5 Ultra</h3>
 							<p>RK3588 2.4GHz | 8 cores | ARMv8</p>
 						</a>
 					</div>
