--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				<!-- Main navigation -->
 				<div class="navbar-collapse collapse">
 					<a class="nav-link" href="#home">HOME</a>
-					<a class="nav-link" href="#features">FEATURES</a>
+					<a class="nav-link" href="#features">FUNKTIONEN</a>
 					<a class="nav-link" href="#download">DOWNLOAD</a>
 					<a class="nav-link" href="https://dietpi.com/docs/">DOCS</a>
 					<a class="nav-link" href="https://dietpi.com/forum/">FORUM</a>
