Fix some links and disable fragment checking
since it throws warnings on all binary files and errors on all OS image files at the moment, with fragment checker being too agressive since last lychee release.

--- a/dietpi-software.html
+++ b/dietpi-software.html
@@ -405,7 +405,7 @@
 								<span class="close"></span>
 							</div>
 							<div class="project-info">
-								<div><a href="https://dietpi.com/docs/software/media/#logitech-media-server" target="_blank" rel="noopener"><span>How to Setup / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
+								<div><a href="https://dietpi.com/docs/software/media/#lyrion-music-server" target="_blank" rel="noopener"><span>How to Setup / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
 								<br>
 								<div><span>Pros:</span>Feature rich music server with web interface (Squeezebox) and audio playback (Squeezelite)</div>
 								<div><span>Cons:</span>TBA</div>
@@ -2439,7 +2439,7 @@
 								<span class="close"></span>
 							</div>
 							<div class="project-info">
-								<div><a href="https://dietpi.com/docs/software/programming/#docker" target="_blank" rel="noopener"><span>How to Setup / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
+								<div><a href="https://dietpi.com/docs/software/system_stats/#docker" target="_blank" rel="noopener"><span>How to Setup / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
 							</div>
 							<p> These are a standardized unit of software that allows developers to isolate their application from the environment. Docker is de facto standard to build and share containerized apps.</p>
 						</div>
@@ -2454,7 +2454,7 @@
 								<span class="close"></span>
 							</div>
 							<div class="project-info">
-								<div><a href="https://dietpi.com/docs/software/programming/#docker-compose" target="_blank" rel="noopener"><span>How to Setup / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
+								<div><a href="https://dietpi.com/docs/software/system_stats/#docker-compose" target="_blank" rel="noopener"><span>How to Setup / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
 							</div>
 							<p>A tool used to define and run multi-container docker applications.</p>
 						</div>
@@ -2469,7 +2469,7 @@
 								<span class="close"></span>
 							</div>
 							<div class="project-info">
-								<div><a href="https://dietpi.com/docs/software/programming/#portainer" target="_blank" rel="noopener"><span>How to Setup / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
+								<div><a href="https://dietpi.com/docs/software/system_stats/#portainer" target="_blank" rel="noopener"><span>How to Setup / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
 							</div>
 							<p>Portainer simplifies your Docker container management via Portainer web interface.</p>
 						</div>
@@ -2893,7 +2893,7 @@
 								<span class="close"></span>
 							</div>
 							<div class="project-info">
-								<div><a href="https://dietpi.com/docs/software/webserver_stack/#php-composer" target="_blank" rel="noopener"><span>How to Setup / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
+								<div><a href="https://dietpi.com/docs/software/programming/#php-composer" target="_blank" rel="noopener"><span>How to Setup / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
 							</div>
 							<p>Composer is a tool for dependency management in PHP.</p>
 						</div>
@@ -2923,7 +2923,7 @@
 								<span class="close"></span>
 							</div>
 							<div class="project-info">
-								<div><a href="https://dietpi.com/docs/software/webserver_stack/#nodejs" target="_blank" rel="noopener"><span>How to Setup / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
+								<div><a href="https://dietpi.com/docs/software/programming/#nodejs" target="_blank" rel="noopener"><span>How to Setup / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
 							</div>
 							<p>Node.js is JavaScript runtime built on Chrome’s V8 JavaScript engine.</p>
 						</div>
