Add Orange Pi CM5

--- a/index.html
+++ b/index.html
@@ -1574,6 +1574,24 @@
 						<div class="col-md-6"><img src="images/sbc_images/orangepi5ultra.jpg" alt="Orange Pi 5 Ultra photo" width="8" height="5" loading="lazy"></div>
 					</div>
 				</div>
+				<!-- Orange Pi CM5 -->
+				<div id="orangepicm5" class="single-project">
+					<div class="row"><div class="col-md-12 project-title"><h3>Orange Pi CM5</h3><span class="close"></span></div></div>
+					<div class="row">
+						<div class="col-md-6 project-description">
+							<div class="project-info">
+								<div><span>CPU:</span>Rockchip RK3588 1.8/2.4 GHz | 8 cores | ARMv8</div>
+								<div><span>RAM:</span>2 GiB - 16 GiB LPDDR4</div>
+								<div><span>Storage:</span>32 GiB - 256 GiB onboard eMMC</div>
+								<br>
+								<div><a href="https://dietpi.com/downloads/images/DietPi_OrangePiCM5-ARMv8-Bookworm.img.xz"><span>Download Image:</span><i class="fa fa-download"></i><u>Download</u></a> (<a href="https://dietpi.com/downloads/images/DietPi_OrangePiCM5-ARMv8-Bookworm.img.xz.sha256"><u>SHA256</u></a>) (<a href="https://dietpi.com/downloads/images/DietPi_OrangePiCM5-ARMv8-Bookworm.img.xz.asc"><u>Signature</u></a>)</div>
+								<div><a href="https://dietpi.com/docs/install/" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
+							</div>
+							<p>A compute module of the Orange Pi 5 family with RK3588 SoC. At time of writing, there are two official base boards available, one with 3 Ethernet ports, one with onboard WiFi and M.2 NVMe slot. Both feature a lot of MIPI camera ports.</p>
+						</div>
+						<div class="col-md-6"><img src="images/sbc_images/orangepicm5.jpg" alt="Orange Pi CM5 photo" width="8" height="5" loading="lazy"></div>
+					</div>
+				</div>
 				<!-- Orange Pi Zero 3 -->
 				<div id="orangepizero3" class="single-project">
 					<div class="row"><div class="col-md-12 project-title"><h3>Orange Pi Zero 3</h3><span class="close"></span></div></div>
@@ -1885,6 +1903,13 @@
 						<a href="#downloadinfo" class="thumbnail" rel="#orangepi5ultra">
 							<img src="images/sbc_images/orangepi5ultra.jpg" alt="Orange Pi 5 Ultra photo" width="8" height="5" loading="lazy">
 							<h3>Orange Pi 5 Ultra</h3>
+							<p>RK3588 2.4GHz | 8 cores | ARMv8</p>
+						</a>
+					</div>
+					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix orangepi">
+						<a href="#downloadinfo" class="thumbnail" rel="#orangepicm5">
+							<img src="images/sbc_images/orangepicm5.jpg" alt="Orange Pi CM5 photo" width="8" height="5" loading="lazy">
+							<h3>Orange Pi CM5</h3>
 							<p>RK3588 2.4GHz | 8 cores | ARMv8</p>
 						</a>
 					</div>
