Add v9.14 release slide

--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<!-- Slide 1 -->
 				<div class="da-slide da-slide-current">
-					<h2>Open Beta v9.14</h2>
-					<h4>Please help testing our upcoming release</h4>
+					<h2>DietPi v9.14 has been released</h2>
+					<h4>Check out all changes</h4>
 					<p>We added support and images for Orange Pi 5 Ultra and Orange Pi CM5 (see downloads below). Also, the free Doom game engine GZDoom has been added to our software catalogue.</p>
-					<a class="da-link" href="https://github.com/MichaIng/DietPi/issues/7587" target="_blank" rel="noopener">Release notes</a>
-					<div class="da-img"><img class="img-fluid" src="https://upload.wikimedia.org/wikipedia/commons/8/8c/Doom_–_Game’s_logo.svg" alt="Doom logo" width="360" height="240" loading="lazy"></div>
+					<a class="da-link" href="https://dietpi.com/docs/releases/v9_14/" target="_blank" rel="noopener">Release notes</a>
+					<div class="da-img"><img class="img-fluid" src="https://dietpi.com/docs/assets/images/dietpi-release-v9_14.webp" alt="Doom logo" width="360" height="240" loading="lazy"></div>
 				</div>
 				<!-- Slide 2 -->
 				<div class="da-slide">
