Add separate Odroid HC4 download

--- a/index.html
+++ b/index.html
@@ -1140,7 +1140,7 @@
 					</div>
 				</div>
 				<div id="odroidc4" class="single-project">
-					<div class="row"><div class="col-md-12 project-title"><h3>Odroid C4/HC4</h3><span class="close"></span></div></div>
+					<div class="row"><div class="col-md-12 project-title"><h3>Odroid C4</h3><span class="close"></span></div></div>
 					<div class="row">
 						<div class="col-md-6 project-description">
 							<div class="project-info">
@@ -1155,6 +1155,24 @@
 							<p>Odroid C2 successor with modern upgraded components.</p>
 						</div>
 						<div class="col-md-6"><img src="images/sbc_images/odroidc4.jpg" alt="NanoPi C4 photo" width="8" height="5" loading="lazy"></div>
+					</div>
+				</div>
+				<div id="odroidhc4" class="single-project">
+					<div class="row"><div class="col-md-12 project-title"><h3>Odroid HC4</h3><span class="close"></span></div></div>
+					<div class="row">
+						<div class="col-md-6 project-description">
+							<div class="project-info">
+								<div><span>CPU:</span>Amlogic S905X3 2 GHz | 4 cores | ARMv8</div>
+								<div><span>RAM:</span>4 GiB DDR4</div>
+								<div><span>NET:</span>Gbit Ethernet</div>
+								<div><span>Storage:</span>2x SATA socket</div>
+								<br>
+								<div><a href="https://dietpi.com/downloads/images/DietPi_OdroidHC4-ARMv8-Bookworm.img.xz"><span>Download Image:</span><i class="fa fa-download"></i><u>Download</u></a> (<a href="https://dietpi.com/downloads/images/DietPi_OdroidHC4-ARMv8-Bookworm.img.xz.sha256"><u>SHA256</u></a>) (<a href="https://dietpi.com/downloads/images/DietPi_OdroidHC4-ARMv8-Bookworm.img.xz.asc"><u>Signature</u></a>)</div>
+								<div><a href="https://dietpi.com/docs/install/" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
+							</div>
+							<p>Variant of the Odroid C4 with 2 SATA ports and SPI flash to potentially support booting from USB and SATA.</p>
+						</div>
+						<div class="col-md-6"><img src="images/sbc_images/odroidhc4.jpg" alt="NanoPi HC4 photo" width="8" height="5" loading="lazy"></div>
 					</div>
 				</div>
 				<!-- NanoPi R4S -->
@@ -1720,7 +1738,14 @@
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix odroid">
 						<a href="#downloadinfo" class="thumbnail" rel="#odroidc4">
 							<img src="images/sbc_images/odroidc4.jpg" alt="Odroid C4 photo" width="8" height="5" loading="lazy">
-							<h3>Odroid C4/HC4</h3>
+							<h3>Odroid C4</h3>
+							<p>S905X3 2 GHz | 4 cores | ARMv8</p>
+						</a>
+					</div>
+					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix odroid">
+						<a href="#downloadinfo" class="thumbnail" rel="#odroidhc4">
+							<img src="images/sbc_images/odroidhc4.jpg" alt="Odroid HC4 photo" width="8" height="5" loading="lazy">
+							<h3>Odroid HC4</h3>
 							<p>S905X3 2 GHz | 4 cores | ARMv8</p>
 						</a>
 					</div>
