Add v9.15 release slide

--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<!-- Slide 1 -->
 				<div class="da-slide da-slide-current">
-					<h2>DietPi v9.14 has been released</h2>
+					<h2>DietPi v9.15 has been released</h2>
 					<h4>Check out all changes</h4>
-					<p>We added support and images for Orange Pi 5 Ultra and Orange Pi CM5 (see downloads below). Also, the free Doom game engine GZDoom has been added to our software catalogue.</p>
-					<a class="da-link" href="https://dietpi.com/docs/releases/v9_14/" target="_blank" rel="noopener">Release notes</a>
+					<p>We added support for the Orange Pi 3 non-LTS, own up-to-date Unbound packages, and a script to upgrade Debian Bookworm systems to Trixie, the new Debian release scheduled for August 9th.</p>
+					<a class="da-link" href="https://dietpi.com/docs/releases/v9_15/" target="_blank" rel="noopener">Release notes</a>
 					<div class="da-img"><img class="img-fluid" src="https://dietpi.com/docs/assets/images/dietpi-release-v9_14.webp" alt="Doom logo" width="360" height="240" loading="lazy"></div>
 				</div>
 				<!-- Slide 2 -->
