--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<!-- Slide 1 -->
 				<div class="da-slide da-slide-current">
-					<h2>DietPi v9.15 has been released</h2>
-					<h4>Check out all changes</h4>
-					<p>We added support for the Orange Pi 3 non-LTS, own up-to-date Unbound packages, and a script to upgrade Debian Bookworm systems to Trixie, the new Debian release scheduled for August 9th.</p>
-					<a class="da-link" href="https://dietpi.com/docs/releases/v9_15/" target="_blank" rel="noopener">Release notes</a>
-					<div class="da-img"><img class="img-fluid" src="https://dietpi.com/docs/assets/images/dietpi-release-v9_15.webp" alt="Doom logo" width="360" height="240" loading="lazy"></div>
+					<h2>Open Beta v9.16</h2>
+					<h4>Please help testing our upcoming release</h4>
+					<p>Domoticz home automation for Bookworm and Trixie; Kodi 21 for Raspberry Pi; Switch to Adoptium Temurin Java for 64-bit systems and Java 17 for ARMv6 RPi models; Lots of Debian Trixie support fixes</p>
+					<a class="da-link" href="https://github.com/MichaIng/DietPi/issues/7677" target="_blank" rel="noopener">Release notes</a>
+					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="360" height="240" loading="lazy"></div>
 				</div>
 				<!-- Slide 2 -->
 				<div class="da-slide">
