Add Orange Pi 3 to download page

--- a/index.html
+++ b/index.html
@@ -1452,6 +1452,26 @@
 						<div class="col-md-6"><img src="images/sbc_images/rock5b.jpg" alt="ROCK 5B photo" width="8" height="5" loading="lazy"></div>
 					</div>
 				</div>
+				<!-- Orange Pi 3 -->
+				<div id="orangepi3" class="single-project">
+					<div class="row"><div class="col-md-12 project-title"><h3>Orange Pi 3</h3><span class="close"></span></div></div>
+					<div class="row">
+						<div class="col-md-6 project-description">
+							<div class="project-info">
+								<div><span>CPU:</span>Allwinner H6 Cortex-A53 1.8 GHz | 4 cores | ARMv8</div>
+								<div><span>RAM:</span>1 GiB - 2 GiB LPDDR3</div>
+								<div><span>USB:</span>4x USB 3.0 + 1x USB 2.0 + 1x USB 2.0 OTG</div>
+								<div><span>NET:</span>Gbit Ethernet + onboard WiFi 5/Bluetooth</div>
+								<div><span>Storage:</span>microSD and 8 GiB eMMC or socket</div>
+								<br>
+								<div><a href="https://dietpi.com/downloads/images/DietPi_OrangePi3-ARMv8-Bookworm.img.xz"><span>Download Image:</span><i class="fa fa-download"></i><u>Download</u></a> (<a href="https://dietpi.com/downloads/images/DietPi_OrangePi3-ARMv8-Bookworm.img.xz.sha256"><u>SHA256</u></a>) (<a href="https://dietpi.com/downloads/images/DietPi_OrangePi3-ARMv8-Bookworm.img.xz.asc"><u>Signature</u></a>)</div>
+								<div><a href="https://dietpi.com/docs/install/" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
+							</div>
+							<p>A credit card sized SBC with older Allwinner H6 SoC. Since the similarly featured Orange Pi 3B is available with faster CPU, RAM and otherwise similar hardware features/aspects, is available for minimal surcharge, there is probably not really a reason to buy this anymore. But if you have one, we got you covered.</p>
+						</div>
+						<div class="col-md-6"><img src="images/sbc_images/orangepi3.jpg" alt="Orange Pi 3 photo" width="8" height="5" loading="lazy"></div>
+					</div>
+				</div>
 				<!-- Orange Pi 3 LTS -->
 				<div id="orangepi3lts" class="single-project">
 					<div class="row"><div class="col-md-12 project-title"><h3>Orange Pi 3 LTS</h3><span class="close"></span></div></div>
@@ -1880,6 +1900,13 @@
 							<img src="images/sbc_images/rock5a.jpg" alt="ROCK 5A photo" width="8" height="5" loading="lazy">
 							<h3>ROCK 5A</h3>
 							<p>RK3588 2.4GHz | 8 cores | ARMv8</p>
+						</a>
+					</div>
+					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix orangepi">
+						<a href="#downloadinfo" class="thumbnail" rel="#orangepi3">
+							<img src="images/sbc_images/orangepi3.jpg" alt="Orange Pi 3 photo" width="8" height="5" loading="lazy">
+							<h3>Orange Pi 3</h3>
+							<p>H6 1.8 GHz | 4 cores | ARMv8</p>
 						</a>
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix orangepi">
