Add v9.17 release slide
and hide subtitle instead of link button on very small screens.

--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<!-- Slide 1 -->
 				<div class="da-slide da-slide-current">
-					<h2>Open Beta v9.17</h2>
-					<h4>Please help testing our upcoming release</h4>
-					<p>DietPi-Backup disk usage and creation times reduced to a fraction if multiple backups are used; Roon Server early access selection added; Steps towards images with F2FS and Btrfs root filesystem done</p>
-					<a class="da-link" href="https://github.com/MichaIng/DietPi/issues/7734" target="_blank" rel="noopener">All info</a>
-					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="360" height="240" loading="lazy"></div>
+					<h2>DietPi v9.17 has been released</h2>
+					<h4>Check out all changes</h4>
+					<p>The September 20rd, 2025 release of DietPi v9.17 comes with faster and less disk space consuming DietPi backups, a Roon Server early access toggle, solved SPI storage flashing issues, and more.</p>
+					<a class="da-link" href="https://dietpi.com/docs/releases/v9_16/" target="_blank" rel="noopener">Release notes</a>
+					<div class="da-img"><img class="img-fluid" src="https://dietpi.com/docs/assets/images/dietpi-release-v9_16.webp" alt="DietPi logo" width="360" height="240" loading="lazy"></div>
 				</div>
 				<!-- Slide 2 -->
 				<div class="da-slide">
