--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<meta name="theme-color" content="#000000">
 		<!-- Load CSS styles -->
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css?v=2">
-		<link rel="stylesheet" type="text/css" href="css/cslider.min.css">
+		<link rel="stylesheet" type="text/css" href="css/cslider.min.css?v=0">
 		<link rel="stylesheet" type="text/css" href="css/style.min.css?v=8">
 		<!-- Include JavaScript -->
 		<script defer src="js/bootstrap.min.js?v=2"></script>
