--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<!-- Slide 1 -->
 				<div class="da-slide da-slide-current">
-					<h2>DietPi v9.17 has been released</h2>
+					<h2>DietPi v9.18 has been released</h2>
 					<h4>Check out all changes</h4>
-					<p>The September 20th, 2025 release of DietPi v9.17 comes with faster and less disk space consuming DietPi backups, a Roon Server early access toggle, solved SPI storage flashing issues, and more.</p>
-					<a class="da-link" href="https://dietpi.com/docs/releases/v9_17/" target="_blank" rel="noopener">Release notes</a>
-					<div class="da-img"><img class="img-fluid" src="https://dietpi.com/docs/assets/images/dietpi-release-v9_17.webp" alt="The image presents a single-board computer within a futuristic facility setting in a 3D comic art style. 3 pregnant symbols around the SBC show a storage with a tick, a stable/early-access toggle with a music note, and a microchip with a tick on it respectively. 4 minions are around, climbing a ladder, touching the GPIO pins of the SBC, and cheering respectively." width="360" height="240" loading="lazy"></div>
+					<p>Support for the new SBCs NanoPi R3S, R3S LTS, R76S and M5 has been added. The ebook/audiobook collection manager LazyLibrarian has been added to our software catalogue, and the DietPi-Dashboard received a major rework.</p>
+					<a class="da-link" href="https://dietpi.com/docs/releases/v9_18/" target="_blank" rel="noopener">Release notes</a>
+					<div class="da-img"><img class="img-fluid" src="https://dietpi.com/docs/assets/images/dietpi-release-v9_18.webp" alt="The image shows a futuristic room in comic art style with a violet to cyan colour scheme. There is a library bookshelf at the left wall with a sleeping robot sitting and leaning against it. The centre of the image shows a holographic screen showing some dashboard, attached to two computer systems below it. At the right side there is a single-board computer, attached to the other computers, with a Pi (number) sign and a small &quot;n&quot; in a cycle on it." width="360" height="240" loading="lazy"></div>
 				</div>
 				<!-- Slide 2 -->
 				<div class="da-slide">
